--- a/limbo/affiliate/templates/page/Home_page.html
+++ b/limbo/affiliate/templates/page/Home_page.html
@@ -147,11 +147,9 @@
         </a>
       </div>
     </div>
-    <div class="quick-link">
-      <iframe src="https://widget.crictimes.org/" style="width:100%;min-height: 450px; border: 0;" scrolling="yes"></iframe>
-    </div>
+
     <!-- quick links -->
-    <!-- <div class="quick-link">
+    <div class="quick-link">
       <div class="link1 shadow">
         <a class="row1" href="{% url 'pubg'%}">Best PUBG Mobile under <span>&#x20B9;</span>20,000</a>
       </div>
@@ -169,7 +167,7 @@
       <div class="link5 shadow">
         <a href="{% url 'camera15k'%}">Best camera phone under <span>&#x20B9;</span>15000</a>
       </div>
-    </div> -->
+    </div>
     <!-- heading -->
     <div class="main">
       <h2 class="heading">upcoming</h2>
@@ -203,15 +201,15 @@
         </div>
       </div>
       <div class="card">
-        <a href="{% url 'realme7pro' %}"><img src="{% static 'image/mobile/realme/realme-7-pro-2.jpg'%}" class="card-img-top" alt="...">
+        <a href="{% url 'OnePlus_9' %}"><img src="{% static 'image/mobile/oneplus/oneplus-9-2.jpg'%}" class="card-img-top" alt="...">
         <div class="image-text">
-          <h4><span>REVIEW</span> Realme 7 Pro : 6/128GB Read Full review</h4>
+          <h4><span>REVIEW</span> OnePlus 9 : 12/512GB Read Full review</h4>
         </div></a>
         <div class="card-body card-body1">
           <ul>
-            <li><a href="{% url 'realme7pro' %}"><p class="card-text"><b>What can be the price of Realme 7 Pro in India?</b></p></a></li>
-            <li><a href="{% url 'realme7pro' %}"><p class="card-text"><b>When can Realme 7 Pro be released in India?</b></p></a></li>
-            <li><a href="{% url 'realme7pro' %}"><p class="card-text"><b>Full specification</b></p></a></li>
+            <li><a href="{% url 'OnePlus_9' %}"><p class="card-text"><b>What can be the price of OnePlus 9 in India?</b></p></a></li>
+            <li><a href="{% url 'OnePlus_9' %}"><p class="card-text"><b>When can OnePlus 9 be released in India?</b></p></a></li>
+            <li><a href="{% url 'OnePlus_9' %}"><p class="card-text"><b>Full specification</b></p></a></li>
           </ul>
         </div>
       </div>
