--- a/limbo/affiliate/templates/mobile/oneplus/oneplus_page/OnePlus .html
+++ b/limbo/affiliate/templates/mobile/oneplus/oneplus_page/OnePlus .html
@@ -15,208 +15,85 @@ when, oneplus 8 will be available on amazon"> {% endblock key%}
     {% block actone%} class="active"{% endblock actone%}
     {% block content%}
     <!-- content -->
-    <div class="content">
-      <div class="content_body">
-        <div class="content_img">
-          <img  src="{% static 'image/mobile/oneplus/oneplus-8-pro-1.jpg' %}" alt="">
+    <div class="container1">
+      <div class="mobile-specs">
+        <div class="mobile-img">
+          <img  src="{% static 'image/mobile/oneplus/oneplus-9-1.jpg' %}" alt="">
         </div>
-        <div class="content_info">
-          <h1 class="content_tittle"><span>REVIEW</span> OnePlus 8 Pro : 8/128GB for Rs.54,999 Watch Full review-<a href="https://www.youtube.com/watch?v=cppdgbCus78">http://www.youtube.com </a></h1>
-          <p class="content_text">OnePlus Release his new flagship smartphone <span>OnePlus 8 Pro</span> in india starting from <span>Rs.54,999</span>. OnePlus is available at <span>Amazon</span>. This smartphone comes with 2 variants like 8/128GB, 12/256GB UFS 3.0 storage technology with colour options like Glacial Green, Ultramarine Blue and Onyx Black. The smartphone is powered by <span>Qualcomm Snapdragon 865 (7 nm+) </span> and Non-removable Li-Po 4510 mAh battery that supports Wrap Charge 30T (5V/6A) and Wrap Charge 30 Wireless technologies which can charge 50% in just 23 min. It comes with the 5G chipset:X55 which supports 5G nework.  </p>
-          <a href="{% url 'OnePlus_8pro'%}" class="content_spec">Full Specificaton</a>
-          <p></p>
-
-          <div class="aff-link1">
-            <form action="https://www.amazon.in/Test-Exclusive-543/dp/B078BN2H3R/ref=sr_1_2?dchild=1&keywords=oneplus+8+pro&qid=1594894179&sr=8-2">
-              <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
-            </form>
-            <form action="https://www.amazon.in/Test-Exclusive-543/dp/B078BN2H3R/ref=sr_1_2?dchild=1&keywords=oneplus+8+pro&qid=1594894179&sr=8-2">
-              <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
-            </form>
+        <div class="mobile-info">
+          <div class="mobile-name-price">
+            <div class="mobile-view-name">
+              <div class="mobile-view">
+                <h5>043</h5>
+                <p><i class="fa fa-eye"></i></p>
+              </div>
+              <div class="mobile-name">
+                <h3>OnePlus 9 - 5G</h3>
+                <div class="star-rating">
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star"></span>
+                </div>
+              </div>
+            </div>
+            <div class="mobile-price">
+              <h3>Rs. 74,000</h3>
+              <p>see more price</p>
+            </div>
           </div>
-
-
+          <div class="mobile-detail">
+            <div class="performance">
+              <h4>Performance</h4>
+              <div class="bar">
+                <p class="very-good"></p>
+              </div>
+              <div class="information">
+                <p>Octa-core</p>
+                <p class="info">Qualcomm Snapdragon 875</p>
+                <p class="info">512GB 12GB RAM</p>
+              </div>
+            </div>
+            <div class="display">
+              <h4>Display</h4>
+              <div class="bar">
+                <p class="very-good"></p>
+              </div>
+              <div class="information">
+                <p>6.7-inch</p>
+                <p class="info">AMOLED Display </p>
+              </div>
+            </div>
+            <div class="camera">
+              <h4>Camera</h4>
+              <div class="bar">
+                <p class="excellent"></p>
+              </div>
+              <div class="information">
+                <p>64-MP + 16-MP + 8-MP + 2-MP</p>
+                <p class="info">Quad-LED dual-tone flash</p>
+                <p class="info">16 MP</p>
+              </div>
+            </div>
+            <div class="battery">
+              <h4>Battery</h4>
+              <div class="bar">
+                <p class="very-good"></p>
+              </div>
+              <div class="information">
+                <p>5000mAh</p>
+                <p class="info">Fast charging</p>
+              </div>
+            </div>
           </div>
+          <div class="short-info">
+            <div class="full-specs">
+              <h5><a href="{% url 'OnePlus_9' %}">Full specification</a></h5>
+            </div>
+          </div>
+        </div>
       </div>
-    </div>
-    <!-- 2 -->
-    <div class="content">
-      <div class="content_body">
-        <div class="content_img">
-          <img  src="{% static 'image/mobile/oneplus/oneplus-8-1.jpg' %}" alt="">
-        </div>
-        <div class="content_info">
-          <h1 class="content_tittle"><span>REVIEW</span> OnePlus 8 : 8/128GB for Rs.44,999 Watch Full review-<a href="https://www.youtube.com/watch?v=t3m7cw5V3U0">http://www.youtube.com </a></h1>
-          <p class="content_text">OnePlus Release his brand new <span>OnePlus 8</span> in india on  2020, April 14 and it starting from <span> Rs.41,999</span>. OnePlus 8 is available at <span>Amazon</span> in lowest price. This smartphone comes with 2 variants like 128GB 6GB RAM and 128GB 8GB RAM with UFS 3.0 storage technology. It is available at 3 colour options like	Glacial Green, Interstellar Glow and Onyx Black. The smart-phone is powered by the <span>Qualcomm Snapdragon 865 (7 nm+)</span> and   Non-removable Li-Po 4510 mAh battery that supports Wrap Charge 30T (5V/6A) which can charge 50% in just 23 min. It comes with the 5G chipset:X55 which supports 5G nework.</p>
-          <a href="{% url 'OnePlus_8'%}" class="content_spec">Full Specificaton</a>
-          <p></p>
-
-          <div class="aff-link1">
-            <form action="https://www.amazon.in/Test-Exclusive-516/dp/B077Q42GD8/ref=sr_1_2?dchild=1&keywords=oneplus+8&qid=1594894553&sr=8-2">
-              <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
-            </form>
-            <form action="https://www.amazon.in/Test-Exclusive-516/dp/B077Q42GD8/ref=sr_1_2?dchild=1&keywords=oneplus+8&qid=1594894553&sr=8-2">
-              <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
-            </form>
-          </div>
-
-
-       </div>
-      </div>
-    </div>
-    <!-- 3 -->
-    <div class="content">
-      <div class="content_body">
-        <div class="content_img">
-          <img  src="{% static 'image/mobile/oneplus/oneplus-7t-pro-1.jpg' %}" alt="">
-        </div>
-        <div class="content_info">
-          <h1 class="content_tittle"><span>REVIEW</span> OnePlus 7T Pro : 8/256GB for Rs.47,999 Watch Full review-<a href="https://www.youtube.com/watch?v=iE8ojys_0uc">http://www.youtube.com </a></h1>
-          <p class="content_text">OnePlus Release his brand new smartphone <span>Realme 7T Pro</span> in india on 19 October ,2019 which starting from <span> Rs.47,999 </span>.OnePlus 7T Pro available at <span>Amazon</span> in lowest prices. This smartphone comes with 2 varients 256GB 12GB and 256GB 8GB RAM with UFS 3.0 storage technology. It is available at 2 colour options like Haze Blue and Mclaren Edition. The smart-phone is powered by the <span>Qualcomm Snapdragon 855 Plus (7 nm)</span> and Non-removable Li-Po 4065 mAh battery that supports Wrap Charge 30T (5V/6A) which can charge 68% in just 30 min. It supports 4G network.</p>
-          <a href="{% url 'OnePlus_7T_pro'%}" class="content_spec">Full Specificaton</a>
-          <p></p>
-
-          <div class="aff-link1">
-            <form action="https://www.amazon.in/Test-Exclusive-749/dp/B07DJ8K2KT/ref=sr_1_1?dchild=1&keywords=oneplus+7t+pro&qid=1594894657&sr=8-1">
-              <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
-            </form>
-            <form action="https://www.amazon.in/Test-Exclusive-749/dp/B07DJ8K2KT/ref=sr_1_1?dchild=1&keywords=oneplus+7t+pro&qid=1594894657&sr=8-1">
-              <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
-            </form>
-          </div>
-
-
-
-          </div>
-      </div>
-    </div>
-    <!-- 4 -->
-    <div class="content">
-      <div class="content_body">
-        <div class="content_img">
-          <img  src="{% static 'image/mobile/oneplus/oneplus-7t-1.jpg' %}" alt="">
-        </div>
-        <div class="content_info">
-          <h1 class="content_tittle"><span>REVIEW</span> OnePlus 7T : 8/128GB for Rs.36,780 Watch Full review-<a href="https://www.youtube.com/watch?v=XRiUNPf-_-4">http://www.youtube.com </a></h1>
-          <p class="content_text">OnePlus Release his new smartphone <span>OnePlus 7T</span> in india on 2019, 26th September which starting from <span> Rs.36,780</span>. OnePlus 7T is available at <span>Amazon</span> in lowest prices. This smartphone comes with 2 variants like 128GB 8GB RAM and 256GB 12GB RAM with UFS 3.0 storage technology. It is available at 2 colour options like	Glacier Blue and Frosted Silver. The smart-phone is powered by the <span>Qualcomm Snapdragon 855 Plus (7 nm)</span> and Non-removable Li-Po 3800 mAh battery that supports Wrap Charge 30T (5V/6A) which can charge 70% in just 30 min.</p>
-          <a href="{% url 'OnePlus_7T'%}" class="content_spec">Full Specificaton</a>
-          <p></p>
-
-          <div class="aff-link1">
-            <form action="https://www.flipkart.com/oneplus-7t-frosted-silver-128-gb/p/itma74f3aece46b1?pid=MOBFKWSYFG45UYEB&lid=LSTMOBFKWSYFG45UYEBOVZHMA&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=6b1a61c4-e60b-4f24-95a2-eafbe69ef50c.MOBFKWSYFG45UYEB.SEARCH&ppt=sp&ppn=sp&ssid=nkkq7holm80000001594894734877&qH=36ba0b0bbf2cf86b">
-              <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from flipkart</button>
-            </form>
-            <form action="https://www.flipkart.com/oneplus-7t-frosted-silver-128-gb/p/itma74f3aece46b1?pid=MOBFKWSYFG45UYEB&lid=LSTMOBFKWSYFG45UYEBOVZHMA&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=6b1a61c4-e60b-4f24-95a2-eafbe69ef50c.MOBFKWSYFG45UYEB.SEARCH&ppt=sp&ppn=sp&ssid=nkkq7holm80000001594894734877&qH=36ba0b0bbf2cf86b">
-              <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
-            </form>
-          </div>
-
-
-
-         </div>
-      </div>
-    </div>
-    <!-- 5 -->
-    <div class="content">
-      <div class="content_body">
-        <div class="content_img">
-          <img  src="{% static 'image/mobile/oneplus/oneplus-7-1.jpg' %}" alt="">
-        </div>
-        <div class="content_info">
-          <h1 class="content_tittle"><span>REVIEW</span> OnePlus 7 : 8/256GB for Rs.35,989 Watch Full review-<a href="https://www.youtube.com/watch?v=_gP-fyx2SUA">http://www.youtube.com </a></h1>
-          <p class="content_text">OnePlus Released his new <span>OnePlus 7</span> in India on 2019, 14th May and starting from<span> Rs.34,999</span>. OnePlus 7 is available at <span>flipkart</span> in lowest prices. This smartphone comes with 2 variants like 128GB 6GB and 256GB 8 GB RAM with UFS 3.0 storage technology. It is avilable in 2 colour options like Red and Mirror Grey. The smart-phone is powered by the <span>Qualcomm Snapdragon 855 (7 nm)</span> and with in display fingerprint. Non-removable Li-Po 3700 mAh battery that supports Wrap Charge 30T (5V/6A) which can charge 50% in just 23 min.</p>
-          <a href="{% url 'OnePlus_7'%}" class="content_spec">Full Specificaton</a>
-          <p></p>
-
-          <div class="aff-link1">
-            <form action="https://www.amazon.in/Test-Exclusive-609/dp/B07HGJFVL2/ref=sr_1_1?dchild=1&keywords=oneplus+7&qid=1594894886&sr=8-1">
-              <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
-            </form>
-            <form action="https://www.amazon.in/Test-Exclusive-609/dp/B07HGJFVL2/ref=sr_1_1?dchild=1&keywords=oneplus+7&qid=1594894886&sr=8-1">
-              <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
-            </form>
-          </div>
-
-
-
-          </div>
-      </div>
-    </div>
-    <!-- 6 -->
-    <div class="content">
-      <div class="content_body">
-        <div class="content_img">
-          <img  src="{% static 'image/mobile/oneplus/oneplus-6t-1.jpg' %}" alt="">
-        </div>
-        <div class="content_info">
-          <h1 class="content_tittle"><span>REVIEW</span> OnePlus 6T : 10/256GB for Rs.39,999 Watch Full review-<a href="https://www.youtube.com/watch?v=4rSxuA8OSb4">http://www.youtube.com </a></h1>
-          <p class="content_text">OnePLus Released his new <span>One Plus 6T</span> in India on 2018, October and starting from<span> 39,999</span>. OnePlus 6T is  available at <span>flipkart</span> in lowest prices. This smartphone comes with 2 variants like 128GB 8GB and 256GB 10GB RAM  with colour options like Speed Orange, Thunder Purple,Mirror Black and Midnight Black. The smart-phone is powered by the <span>Qualcomm Snapdragon 845 (10 nm)</span> and with in display fingerprint. Non-removable Li-Po 3700 mAh battery that supports Wrap Charge 30 (5V/6A) which can charge 50% in just 30 min.</p>
-          <a href="{% url 'OnePlus_6T'%}" class="content_spec">Full Specificaton</a>
-         <p></p>
-
-          <div class="aff-link1">
-            <form action="https://www.flipkart.com/oneplus-6t-speed-orange-256-gb/p/itm481488ed3d219?pid=MOBFKFPEXZUY9VBV&lid=LSTMOBFKFPEXZUY9VBVV6WN6D&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=76f092bc-1a48-48b2-ac85-1e7bd446d892.MOBFKFPEXZUY9VBV.SEARCH&ppt=sp&ppn=sp&ssid=qcosu1k1ds0000001594894957577&qH=8a6c02f7c5300ef2">
-              <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from flipkart</button>
-            </form>
-            <form action="https://www.flipkart.com/oneplus-6t-speed-orange-256-gb/p/itm481488ed3d219?pid=MOBFKFPEXZUY9VBV&lid=LSTMOBFKFPEXZUY9VBVV6WN6D&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=76f092bc-1a48-48b2-ac85-1e7bd446d892.MOBFKFPEXZUY9VBV.SEARCH&ppt=sp&ppn=sp&ssid=qcosu1k1ds0000001594894957577&qH=8a6c02f7c5300ef2">
-              <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
-            </form>
-          </div>
-
-
-
-          </div>
-      </div>
-    </div>
-    <!-- 7 -->
-    <div class="content">
-      <div class="content_body">
-        <div class="content_img">
-          <img  src="{% static 'image/mobile/oneplus/oneplus-5-1.jpg' %}" alt="">
-        </div>
-        <div class="content_info">
-          <h1 class="content_tittle"><span>REVIEW</span> OnePlus 5 : 6/64GB for Rs.28,999 Watch Full review-<a href="https://www.youtube.com/watch?v=995M3VOGhYs">http://www.youtube.com </a></h1>
-          <p class="content_text">OnePLus Released his new <span>One Plus 5</span> in India on 2017, June and starting from<span> Rs.28,999</span>. OnePlus 5 is  available at <span>Amazon</span> in lowest prices. This smartphone comes with 2 variants like 64GB 6GB and 128GB 8GB RAM with colour options like Slate Gray, Soft Gold and Midnight Black. The smart-phone is powered by the <span>Qualcomm Snapdragon 835 (10 nm)</span> with non-removable Li-Po 3300 mAh battery which comes with Dash Charger (5V/4A).</p>
-          <a href="{% url 'OnePlus_5'%}" class="content_spec">Full Specificaton</a>
-          <p></p>
-
-          <div class="aff-link1">
-            <form action="https://www.amazon.in/OnePlus-Slate-Gray-64GB-memory/dp/B01NAKTR2H/ref=sr_1_1?dchild=1&keywords=oneplus+5&qid=1594895062&sr=8-1">
-              <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
-            </form>
-            <form action="https://www.amazon.in/OnePlus-Slate-Gray-64GB-memory/dp/B01NAKTR2H/ref=sr_1_1?dchild=1&keywords=oneplus+5&qid=1594895062&sr=8-1">
-              <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
-            </form>
-          </div>
-
-
-           <p></p><br>
-         </div>
-    </div>
-  </div>
-    <!-- 8 -->
-  <div class="content">
-      <div class="content_body">
-        <div class="content_img">
-          <img  src="{% static 'image/mobile/oneplus/oneplus-3t-1.jpg' %}" alt="">
-        </div>
-        <div class="content_info">
-          <h1 class="content_tittle"><span>REVIEW</span> OnePlus 3T : 6/64GB for Rs.19,949 Watch Full review-<a href="https://www.youtube.com/watch?v=HRh1b3dz2FE">http://www.youtube.com </a></h1>
-          <p class="content_text">OnePLus Released his new <span>One Plus 3T</span> in India on 2016, November and starting from<span> Rs.19,949</span>. OnePlus 3T is  available at <span>flipkart</span> in lowest prices. This smartphone comes with 2 variants like 64GB 6GB and 128GB 6GB RAM  with colour options like Speed Orange, Thunder Purple,Mirror Black and Midnight Black. The smart-phone is powered by the <span>Qualcomm Snapdragon 821 (10 nm)</span> and with in display fingerprint. Non-removable Li-Po 3400 mAh battery that comes with Dash Charge (5V/4A).</p>
-          <a href="{% url 'OnePlus_3T'%}" class="content_spec">Full Specificaton</a>
-         <p></p>
-
-          <div class="aff-link1">
-            <form action="https://www.amazon.in/OnePlus-3T-Gunmetal-64GB-memory/dp/B01FM7JDEO?th=1" class="affilated-link_amazon">
-              <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
-            </form>
-            <form action="https://www.amazon.in/OnePlus-3T-Gunmetal-64GB-memory/dp/B01FM7JDEO?th=1" class="affilated-link_amazon">
-              <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
-            </form>
-          </div>
-          <p></p>
-
-         </div>
-      </div>
+      <!-- 10 -->
     </div>
     {% endblock content%}
