--- a/limbo/affiliate/templates/mobile/vivo/vivo v20 pro/vivo-v20-pro.html
+++ b/limbo/affiliate/templates/mobile/vivo/vivo v20 pro/vivo-v20-pro.html
@@ -1,42 +1,42 @@
 {% extends 'page/bas.html' %}
-{% block desc%}<meta name="description" content="OnePlus 9 price in India start from Rs. 74,000 and OnePlus 9 expected release date is 10th January 2021. - hipein "> {% endblock desc%}
-{% block key%}<meta name="keywords" content="OnePlus 9, OnePlus 9  specification, OnePlus 9 release date, OnePlus 9 price, OnePlus 9  price in india"> {% endblock key%}
+{% block desc%}<meta name="description" content="Vivo V20 Pro price in India start from Rs. 29,999 and Vivo V20 Pro expected release date is 02 December 2020. - hipein "> {% endblock desc%}
+{% block key%}<meta name="keywords" content="Vivo V20 Pro, Vivo V20 Pro  specification, Vivo V20 Pro release date, Vivo V20 Pro price, Vivo V20 Pro  price in india"> {% endblock key%}
 {% block style %}
 {% endblock style %}
     {% load static %}
-    {% block title%}OnePlus 9  price in india, Rumour, specification and features - hipein{% endblock title%}
+    {% block title%}Vivo V20 Pro  price in india, specification and features - hipein{% endblock title%}
     {% block actmob%} class="active"{% endblock actmob%}
     {% block content%}
     <div class="wrapper">
       <div class="main">
         <div class="headline2">
-          <h1 class="content_tittle" style="font-weight: 400;"><span>REVIEW</span> OnePlus 9  (12/512 GB) price in india, Rumour, specification and features.</h1>
-          <p style="font-weight: 400;">OnePlus launching his new  phone OnePlus 9. Which is a Flagship phone starting from Rs Rs. 74,000. </p>
+          <h1 class="content_tittle" style="font-weight: 400;"><span>REVIEW</span> Vivo V20 Pro (8/128 GB) price in india, specification and features.</h1>
+          <p style="font-weight: 400;">Vivo launching his new  phone Vivo V20 Pro. Which is a best 5G phone starting from Rs. 29,999. </p>
         </div>
         <div>
-          <img class="image" src="{% static 'image/mobile/oneplus/oneplus-9-2.jpg'%}" alt="">
+          <img class="image" src="{% static 'image/mobile/vivo/vivo-v20-pro-2.webp'%}" alt="">
         </div>
         <p class="content" style="border-bottom: 1px solid #eee;">Image source | google.com - Uploaded by: <a href="#">GSM Arena</a></p>
         <div class="info">
-          <h2 style="font-weight: 400;">About OnePlus 9 </h2>
-          <p>Here a lot of leaks have come out about OnePlus 9 its specification amazes you. OnePlus 9  smartphone runs on the latest version of the Android operating system Android v11 (Q). The phone is powered by an Octa-core 3.1GHz Single core Kryo 585, a 2.42GHz Tri core Kryo 585 with a 1.8GHz Quad-core Kryo 585 processor configuration and it runs on Qualcomm Snapdragon 875. </p>
-          <p>OnePlus 9 smartphone has an AMOLED display with 1080 x 2400 pixels screen resolution and 396 PPI pixel density. Talking about its camera, On the front camera, you get a 16-megapixel primary camera and on the rear camera, there is a 64 megapixel wide-angle, 16-megapixels ultra-wide, 8-megapixel depth and 2-megapixel micro with an UltraPixel BSI image sensor. camera with features like HDR mode, auto flash, exposure compensation, continuous shooting, and more. It has support for fast charging and non-removable 5000 mAh battery. </p>
-          <h3 style="font-weight: 400;">OnePlus 9  price in India.</h3>
-          <p>OnePlus 9  price in India start from Rs. 74,000 and OnePlus 9  expected release date is 10th January 2021. This smartphone comes with two variants like 8/128GB RAM and 12/512GB RAM. It is available at single color options like Silver. </p>
-          <h3 style="font-weight: 400;">OnePlus 9  Key features:</h3>
+          <h2 style="font-weight: 400;">About Vivo V20 Pro </h2>
+          <p>Here a lot of leaks have come out about Vivo V20 Pro its specification amazes you. Vivo V20 Pro  smartphone runs on the latest version of the Android operating system 	Android 10, Funtouch 11. The phone is powered by an Octa-core (1x2.4 GHz Kryo 475 Prime & 1x2.2 GHz Kryo 475 Gold & 6x1.8 GHz Kryo 475 Silver) and it runs on Qualcomm SDM765 Snapdragon 765G (7 nm). </p>
+          <p>Vivo V20 Pro smartphone has an AMOLED display with 1080 x 2400 pixels screen resolution and 409 PPI pixel density. Talking about its camera, On the front camera, you get a 44-megapixel wide and 8-megapixel ultrawide primary camera and on the rear camera, there is a 64 megapixel wide-angle, 8-megapixel ultrawide, and 2-megapixel depth. camera setup of Vivo V20 Pro include HDR, panorama, dual-LED dual-tone flash, and more. It has support for 33W fast charging and non-removable 4000 mAh battery. </p>
+          <h3 style="font-weight: 400;">Vivo V20 Pro  price in India.</h3>
+          <p>Vivo V20 Pro  price in India start from Rs. 29,999 and Vivo V20 Pro  expected release date is 02 December 2020. This smartphone comes with single variants like 8/128GB RAM. It is available at three color options like Sunset Melody, Midnight Jazz, and Moonlight Sonata. </p>
+          <h3 style="font-weight: 400;">Vivo V20 Pro  Key features:</h3>
           <ul>
             <li>Diaplay: 6.7 inches</li>
-            <li>Processor: Qualcomm Snapdragon 875</li>
-            <li>primary camera: 64MP + 16MP + 8MP + 2MP</li>
-            <li>selfie camera: 16-megapixel</li>
-            <li>Battery: Non-removable Li-Ion 5000 mAh battery</li>
-            <li>Fast charging.</li>
+            <li>Processor: Qualcomm Snapdragon 765G (7 nm)</li>
+            <li>primary camera: 64MP + 8MP + 2MP</li>
+            <li>selfie camera: 44MP + 8MP</li>
+            <li>Battery: Non-removable Li-Ion 4000 mAh battery</li>
+            <li>33W Fast charging.</li>
           </ul>
           <p></p>
         </div>
     {% endblock content%}
     {% block specs%}
-    <h3 class="spec_title">OnePlus 9  specification</h3>
+    <h3 class="spec_title">Vivo V20 Pro  specification</h3>
     <div class="specs_table">
       <div class="specs">
         <strong>Available at</strong>
@@ -44,7 +44,7 @@
       <div class="specs_type">
         <div class="specs_info">
           <strong>Realsed on</strong>
-          <p>10th January 2021</p>
+          <p>02 December 2020</p>
         </div>
         <div class="specs_info">
           <strong>Amazon</strong>
@@ -64,15 +64,15 @@
       <div class="specs_type">
         <div class="specs_info">
           <strong>Make</strong>
-          <p>OnePlus</p>
+          <p>Vivo</p>
         </div>
         <div class="specs_info">
           <strong>Models</strong>
-          <p>9</p>
+          <p>V20 Pro</p>
         </div>
         <div class="specs_info1">
           <strong>Color</strong>
-          <p>Silver</p>
+          <p>Sunset Melody, Midnight Jazz, Moonlight Sonata</p>
         </div>
       </div>
     </div>
@@ -116,7 +116,7 @@
         </div>
         <div class="specs_info">
           <strong>Size(inch)</strong>
-          <p>6.7</p>
+          <p>6.44</p>
         </div>
         <div class="specs_info">
           <strong>Resolution</strong>
@@ -136,11 +136,11 @@
       <div class="specs_type">
         <div class="specs_info">
           <strong>OS</strong>
-          <p>Android 11 (Q)</p>
+          <p>Android 10</p>
         </div>
         <div class="specs_info">
           <strong>Chipset</strong>
-          <p>Qualcomm Snapdragon 875</p>
+          <p>Qualcomm Snapdragon 765G (7 nm)</p>
         </div>
         <div class="specs_info">
           <strong>CPU</strong>
@@ -148,7 +148,7 @@
         </div>
         <div class="specs_info1">
           <strong>Graphics</strong>
-          <p>Adreno 660</p>
+          <p>Adreno 620</p>
         </div>
       </div>
     </div>
@@ -160,11 +160,11 @@
       <div class="specs_type">
         <div class="specs_info">
           <strong>Card Slot</strong>
-          <p>NO</p>
+          <p>Yes</p>
         </div>
         <div class="specs_info1">
           <strong>Internal</strong>
-          <p>12/512GB RAM, 8/128GB RAM</p>
+          <p>8/128GB RAM</p>
         </div>
       </div>
     </div>
@@ -176,7 +176,7 @@
       <div class="specs_type">
         <div class="specs_info">
           <strong>Rear Type </strong>
-          <p>Quad</p>
+          <p>Triple</p>
         </div>
         <div class="specs_info">
           <strong>Resolution</strong>
@@ -184,11 +184,11 @@
         </div>
         <div class="specs_info">
           <strong>Front Type</strong>
-          <p>Single</p>
+          <p>Dual</p>
         </div>
         <div class="specs_info">
           <strong>Front camera</strong>
-          <p>16-megapixel</p>
+          <p>44MP + 8MP</p>
         </div>
       </div>
     </div>
@@ -200,11 +200,11 @@
       <div class="specs_type">
         <div class="specs_info">
           <strong></strong>
-          <p>Li-Po 5000 mAh, non-removable</p>
+          <p>Li-Po 4000 mAh, non-removable</p>
         </div>
         <div class="specs_info">
           <strong>Charging</strong>
-          <p>Yes, Fast charging</p>
+          <p>Yes, Fast charging 33 W</p>
         </div>
       </div>
     </div>
@@ -216,11 +216,11 @@
       <div class="specs_type">
         <div class="specs_info">
           <strong>WLAN</strong>
-          <p>	Wi-Fi 802.11, a/ac/b/g/n/n, dual-band, Wi-Fi Direct, hotspot</p>
+          <p>Wi-Fi 802.11 a/b/g/n/ac, dual-band, Wi-Fi Direct, hotspot</p>
         </div>
         <div class="specs_info">
           <strong>Bluetooth</strong>
-          <p>v5.0</p>
+          <p>v5.0, A2DP, LE</p>
         </div>
         <div class="specs_info">
           <strong>GPS</strong>
@@ -240,11 +240,11 @@
       <div class="specs_type">
         <div class="specs_info">
           <strong>Sensors</strong>
-            <p>Fingerprint, Proximity Sensor, Ambient Light Sensor,</p>
+            <p>	Fingerprint (under display, optical), accelerometer, gyro,</p>
         </div>
         <div class="specs_info1">
           <strong></strong>
-            <p>Gyro, Accelerometer, Compass</p>
+            <p>Gproximity, compass</p>
         </div>
       </div>
     </div>
@@ -260,12 +260,12 @@
         </div>
         <div class="specs_info">
           <strong>3.5mm jack</strong>
-          <p>Yes</p>
+          <p>No</p>
         </div>
       </div>
     </div>
     <div class="comment">
-      <div class="fb-comments" data-href="https://www.hipein.com/mobile/OnePlus-9" data-order-by="social" data-numposts="100" data-width="100%" style="display:block;"></div>
+      <div class="fb-comments" data-href="https://www.hipein.com/mobile/vivo-v20-pro" data-order-by="social" data-numposts="100" data-width="100%" style="display:block;"></div>
     </div>
   </div>
 {% endblock specs%}
