--- a/limbo/affiliate/templates/mobile/other/moto-g-5g.html
+++ b/limbo/affiliate/templates/mobile/other/moto-g-5g.html
@@ -1,42 +1,42 @@
 {% extends 'page/bas.html' %}
-{% block desc%}<meta name="description" content="Vivo V20 Pro price in India start from Rs. 29,999 and Vivo V20 Pro expected release date is 02 December 2020. - hipein "> {% endblock desc%}
-{% block key%}<meta name="keywords" content="Vivo V20 Pro, Vivo V20 Pro  specification, Vivo V20 Pro release date, Vivo V20 Pro price, Vivo V20 Pro  price in india"> {% endblock key%}
+{% block desc%}<meta name="description" content="Moto G 5G price in India start from Rs. 20,999 and Moto G 5G expected release date is 02 December 2020. - hipein "> {% endblock desc%}
+{% block key%}<meta name="keywords" content="Moto G 5G, Moto G 5G  specification, Moto G 5G release date, Moto G 5G price, Moto G 5G  price in india"> {% endblock key%}
 {% block style %}
 {% endblock style %}
     {% load static %}
-    {% block title%}Vivo V20 Pro  price in india, specification and features - hipein{% endblock title%}
+    {% block title%}Moto G 5G  price in india, specification and features - hipein{% endblock title%}
     {% block actmob%} class="active"{% endblock actmob%}
     {% block content%}
     <div class="wrapper">
       <div class="main">
         <div class="headline2">
-          <h1 class="content_tittle" style="font-weight: 400;"><span>REVIEW</span> Vivo V20 Pro (8/128 GB) price in india, specification and features.</h1>
-          <p style="font-weight: 400;">Vivo launching his new  phone Vivo V20 Pro. Which is a best 5G phone starting from Rs. 29,999. </p>
+          <h1 class="content_tittle" style="font-weight: 400;"><span>REVIEW</span> Moto G 5G (4/64 GB) price in india, specification and features.</h1>
+          <p style="font-weight: 400;">Motorola launching his new  phone Moto G 5G. Which is a affordable 5G phone starting from Rs. 20,999. </p>
         </div>
         <div>
-          <img class="image" src="{% static 'image/mobile/vivo/vivo-v20-pro-2.webp'%}" alt="">
+          <img class="image" src="{% static 'image/mobile/other/moto-g-5g-2.webp'%}" alt="">
         </div>
-        <p class="content" style="border-bottom: 1px solid #eee;">Image source | google.com - Uploaded by: <a href="#">GSM Arena</a></p>
+        <p class="content" style="border-bottom: 1px solid #eee;">Image source | google.com - Uploaded by: <a href="#">Flipkart</a></p>
         <div class="info">
-          <h2 style="font-weight: 400;">About Vivo V20 Pro </h2>
-          <p>Here a lot of leaks have come out about Vivo V20 Pro its specification amazes you. Vivo V20 Pro  smartphone runs on the latest version of the Android operating system 	Android 10, Funtouch 11. The phone is powered by an Octa-core (1x2.4 GHz Kryo 475 Prime & 1x2.2 GHz Kryo 475 Gold & 6x1.8 GHz Kryo 475 Silver) and it runs on Qualcomm SDM765 Snapdragon 765G (7 nm). </p>
-          <p>Vivo V20 Pro smartphone has an AMOLED display with 1080 x 2400 pixels screen resolution and 409 PPI pixel density. Talking about its camera, On the front camera, you get a 44-megapixel wide and 8-megapixel ultrawide primary camera and on the rear camera, there is a 64 megapixel wide-angle, 8-megapixel ultrawide, and 2-megapixel depth. camera setup of Vivo V20 Pro include HDR, panorama, dual-LED dual-tone flash, and more. It has support for 33W fast charging and non-removable 4000 mAh battery. </p>
-          <h3 style="font-weight: 400;">Vivo V20 Pro  price in India.</h3>
-          <p>Vivo V20 Pro  price in India start from Rs. 29,999 and Vivo V20 Pro  expected release date is 02 December 2020. This smartphone comes with single variants like 8/128GB RAM. It is available at three color options like Sunset Melody, Midnight Jazz, and Moonlight Sonata. </p>
-          <h3 style="font-weight: 400;">Vivo V20 Pro  Key features:</h3>
+          <h2 style="font-weight: 400;">About Moto G 5G </h2>
+          <p>Here a lot of leaks have come out about Moto G 5G its specification amazes you. Moto G 5G smartphone runs on the latest version of the Android operating system Android 10. The phone is powered by an Octa-core (1x2.4 GHz Kryo 475 Prime & 1x2.2 GHz Kryo 475 Gold & 6x1.8 GHz Kryo 475 Silver) and it runs on Qualcomm Snapdragon 765G (7 nm). </p>
+          <p>Moto G 5G smartphone has an LTPS display with 1080 x 2400 pixels screen resolution and 409 PPI pixel density. Talking about its camera, On the front camera, you get a 16-megapixel wide primary camera and on the rear camera, there is a 48 megapixel wide-angle, 8-megapixel ultrawide-angle, and 2-megapixel micro camera setup of Moto G 5G include HDR, panorama, dual-LED dual-tone flash, and more. It has support for 20W TurboPower fast charging support and non-removable 5000 mAh battery. </p>
+          <h3 style="font-weight: 400;">Moto G 5G  price in India.</h3>
+          <p>Moto G 5G  price in India start from Rs. 20,999 and Moto G 5G  expected release date is 30 November 2020. This smartphone comes with single variants like 4/64GB RAM and 6/128GB RAM. It is available at two color options like Volcanic Gray, and Frosted Silver. </p>
+          <h3 style="font-weight: 400;">Moto G 5G  Key features:</h3>
           <ul>
             <li>Diaplay: 6.7 inches</li>
             <li>Processor: Qualcomm Snapdragon 765G (7 nm)</li>
-            <li>primary camera: 64MP + 8MP + 2MP</li>
-            <li>selfie camera: 44MP + 8MP</li>
-            <li>Battery: Non-removable Li-Ion 4000 mAh battery</li>
-            <li>33W Fast charging.</li>
+            <li>primary camera: 48MP + 8MP + 2MP</li>
+            <li>selfie camera: 16MP</li>
+            <li>Battery: Non-removable Li-Ion 5000 mAh battery</li>
+            <li>20W TurboPower fast charging.</li>
           </ul>
           <p></p>
         </div>
     {% endblock content%}
     {% block specs%}
-    <h3 class="spec_title">Vivo V20 Pro  specification</h3>
+    <h3 class="spec_title">Moto G 5G  specification</h3>
     <div class="specs_table">
       <div class="specs">
         <strong>Available at</strong>
@@ -44,7 +44,7 @@
       <div class="specs_type">
         <div class="specs_info">
           <strong>Realsed on</strong>
-          <p>02 December 2020</p>
+          <p>30 November 2020</p>
         </div>
         <div class="specs_info">
           <strong>Amazon</strong>
@@ -64,15 +64,15 @@
       <div class="specs_type">
         <div class="specs_info">
           <strong>Make</strong>
-          <p>Vivo</p>
+          <p>Motorola</p>
         </div>
         <div class="specs_info">
           <strong>Models</strong>
-          <p>V20 Pro</p>
+          <p>G 5G</p>
         </div>
         <div class="specs_info1">
           <strong>Color</strong>
-          <p>Sunset Melody, Midnight Jazz, Moonlight Sonata</p>
+          <p>Volcanic Gray, Frosted Silver</p>
         </div>
       </div>
     </div>
@@ -112,7 +112,7 @@
       <div class="specs_type">
         <div class="specs_info">
           <strong>Screen</strong>
-          <p>AMOLED display capacitive touchscreen</p>
+          <p>LTPS display capacitive touchscreen</p>
         </div>
         <div class="specs_info">
           <strong>Size(inch)</strong>
@@ -148,7 +148,7 @@
         </div>
         <div class="specs_info1">
           <strong>Graphics</strong>
-          <p>Adreno 620</p>
+          <p>Adreno 619</p>
         </div>
       </div>
     </div>
@@ -164,7 +164,7 @@
         </div>
         <div class="specs_info1">
           <strong>Internal</strong>
-          <p>8/128GB RAM</p>
+          <p>4/64GB RAM, 6/128GB RAM</p>
         </div>
       </div>
     </div>
@@ -180,15 +180,15 @@
         </div>
         <div class="specs_info">
           <strong>Resolution</strong>
-          <p>64MP + 16MP + 8MP + 2MP</p>
+          <p>48MP + 16MP + 8MP + 2MP</p>
         </div>
         <div class="specs_info">
           <strong>Front Type</strong>
-          <p>Dual</p>
+          <p>Single</p>
         </div>
         <div class="specs_info">
           <strong>Front camera</strong>
-          <p>44MP + 8MP</p>
+          <p>16MP</p>
         </div>
       </div>
     </div>
@@ -200,11 +200,11 @@
       <div class="specs_type">
         <div class="specs_info">
           <strong></strong>
-          <p>Li-Po 4000 mAh, non-removable</p>
+          <p>Li-Po 5000 mAh, non-removable</p>
         </div>
         <div class="specs_info">
           <strong>Charging</strong>
-          <p>Yes, Fast charging 33 W</p>
+          <p>Yes, Fast charging 20W</p>
         </div>
       </div>
     </div>
@@ -220,7 +220,7 @@
         </div>
         <div class="specs_info">
           <strong>Bluetooth</strong>
-          <p>v5.0, A2DP, LE</p>
+          <p>v5.1, A2DP, LE</p>
         </div>
         <div class="specs_info">
           <strong>GPS</strong>
@@ -228,7 +228,7 @@
         </div>
         <div class="specs_info1">
           <strong>Radio</strong>
-          <p>No</p>
+          <p>FM Radio</p>
         </div>
       </div>
     </div>
@@ -240,11 +240,11 @@
       <div class="specs_type">
         <div class="specs_info">
           <strong>Sensors</strong>
-            <p>	Fingerprint (under display, optical), accelerometer, gyro,</p>
+            <p>Fingerprint (rear-mounted), accelerometer, gyro, proximity,</p>
         </div>
         <div class="specs_info1">
           <strong></strong>
-            <p>Gproximity, compass</p>
+            <p>compass</p>
         </div>
       </div>
     </div>
@@ -260,12 +260,12 @@
         </div>
         <div class="specs_info">
           <strong>3.5mm jack</strong>
-          <p>No</p>
+          <p>Yes</p>
         </div>
       </div>
     </div>
     <div class="comment">
-      <div class="fb-comments" data-href="https://www.hipein.com/mobile/vivo-v20-pro" data-order-by="social" data-numposts="100" data-width="100%" style="display:block;"></div>
+      <div class="fb-comments" data-href="https://www.hipein.com/mobile/moto-g-5g" data-order-by="social" data-numposts="100" data-width="100%" style="display:block;"></div>
     </div>
   </div>
 {% endblock specs%}
