--- a/limbo/affiliate/templates/mobile/other/moto-g-5g.html
+++ b/limbo/affiliate/templates/mobile/other/moto-g-5g.html
@@ -1,10 +1,10 @@
 {% extends 'page/bas.html' %}
-{% block desc%}<meta name="description" content="Moto G 5G price in India start from Rs. 20,999 and Moto G 5G expected release date is 02 December 2020. - hipein "> {% endblock desc%}
+{% block desc%}<meta name="description" content="Moto G 5G price in India start from Rs. 20,999 and Moto G 5G expected release date is 30 November 2020. - hipein "> {% endblock desc%}
 {% block key%}<meta name="keywords" content="Moto G 5G, Moto G 5G  specification, Moto G 5G release date, Moto G 5G price, Moto G 5G  price in india"> {% endblock key%}
 {% block style %}
 {% endblock style %}
     {% load static %}
-    {% block title%}Moto G 5G  price in india, specification and features - hipein{% endblock title%}
+    {% block title%}Moto G 5G price in India, specification and features - hipein{% endblock title%}
     {% block actmob%} class="active"{% endblock actmob%}
     {% block content%}
     <div class="wrapper">
