--- a/limbo/affiliate/templates/page/Home_page.html
+++ b/limbo/affiliate/templates/page/Home_page.html
@@ -188,15 +188,15 @@
         </div>
       </div>
       <div class="card">
-        <a href="{% url 'pocox3' %}"><img src="{% static 'image/mobile/mi/poco-x3-2.jpg'%}" class="card-img-top" alt="...">
+        <a href="{% url 'motog5g' %}"><img src="{% static 'image/mobile/other/moto-g-5g-2.webp'%}" class="card-img-top" alt="...">
         <div class="image-text">
-          <h4><span>REVIEW</span> POCO X3 : 3/32GB  Read Full review.</h4>
+          <h4><span>REVIEW</span> Moto G 5G : 4/64GB  Read Full review.</h4>
         </div></a>
         <div class="card-body card-body1">
           <ul>
-            <li><a href="{% url 'pocox3' %}"><p class="card-text"><b>What can be the price of POCO X3 in India?</b></p></a></li>
-            <li><a href="{% url 'pocox3' %}"><p class="card-text"><b>When can POCO X3 be released in India?</b></p></a></li>
-            <li><a href="{% url 'pocox3' %}"><p class="card-text"><b>Full specification</b></p></a></li>
+            <li><a href="{% url 'motog5g' %}"><p class="card-text"><b>What can be the price of Moto G 5G in India?</b></p></a></li>
+            <li><a href="{% url 'motog5g' %}"><p class="card-text"><b>When can Moto G 5G be released in India?</b></p></a></li>
+            <li><a href="{% url 'motog5g' %}"><p class="card-text"><b>Full specification</b></p></a></li>
           </ul>
         </div>
       </div>
