--- a/limbo/affiliate/templates/mobile/mi/note 9 pro 5g/note-9-pro-5g.html
+++ b/limbo/affiliate/templates/mobile/mi/note 9 pro 5g/note-9-pro-5g.html
@@ -1,42 +1,42 @@
 {% extends 'page/bas.html' %}
-{% block desc%}<meta name="description" content="Moto G 5G price in India start from Rs. 20,999 and Moto G 5G expected release date is 30 November 2020. - hipein "> {% endblock desc%}
-{% block key%}<meta name="keywords" content="Moto G 5G, Moto G 5G  specification, Moto G 5G release date, Moto G 5G price, Moto G 5G  price in india"> {% endblock key%}
+{% block desc%}<meta name="description" content="Redmi Note 9 Pro 5G price in India start from Rs. 17,960 and Redmi Note 9 Pro 5G expected release date is 01 December 2020. - hipein "> {% endblock desc%}
+{% block key%}<meta name="keywords" content="Redmi Note 9 Pro 5G, Redmi Note 9 Pro 5G  specification, Redmi Note 9 Pro 5G release date, Redmi Note 9 Pro 5G price, Redmi Note 9 Pro 5G  price in india"> {% endblock key%}
 {% block style %}
 {% endblock style %}
     {% load static %}
-    {% block title%}Moto G 5G price in India, specification and features - hipein{% endblock title%}
+    {% block title%}Redmi Note 9 Pro 5G price in India, specification and features - hipein{% endblock title%}
     {% block actmob%} class="active"{% endblock actmob%}
     {% block content%}
     <div class="wrapper">
       <div class="main">
         <div class="headline2">
-          <h1 class="content_tittle" style="font-weight: 400;"><span>REVIEW</span> Moto G 5G (4/64 GB) price in india, specification and features.</h1>
-          <p style="font-weight: 400;">Motorola launching his new  phone Moto G 5G. Which is a affordable 5G phone starting from Rs. 20,999. </p>
+          <h1 class="content_tittle" style="font-weight: 400;"><span>REVIEW</span> Redmi Note 9 Pro 5G (6/128 GB) price in india, specification and features.</h1>
+          <p style="font-weight: 400;">Redmi launching his new  phone Redmi Note 9 Pro 5G. Which is a affordable 5G phone starting from Rs. 17,960. </p>
         </div>
         <div>
-          <img class="image" src="{% static 'image/mobile/other/moto-g-5g-2.webp'%}" alt="">
+          <img class="image" src="{% static 'image/mobile/mi/note-9-pro-5g-2.jpg'%}" alt="">
         </div>
-        <p class="content" style="border-bottom: 1px solid #eee;">Image source | google.com - Uploaded by: <a href="#">Flipkart</a></p>
+        <p class="content" style="border-bottom: 1px solid #eee;">Image source | google.com - Uploaded by: <a href="#">91mobile</a></p>
         <div class="info">
-          <h2 style="font-weight: 400;">About Moto G 5G </h2>
-          <p>Here a lot of leaks have come out about Moto G 5G its specification amazes you. Moto G 5G smartphone runs on the latest version of the Android operating system Android 10. The phone is powered by an Octa-core (1x2.4 GHz Kryo 475 Prime & 1x2.2 GHz Kryo 475 Gold & 6x1.8 GHz Kryo 475 Silver) and it runs on Qualcomm Snapdragon 765G (7 nm). </p>
-          <p>Moto G 5G smartphone has an LTPS display with 1080 x 2400 pixels screen resolution and 409 PPI pixel density. Talking about its camera, On the front camera, you get a 16-megapixel wide primary camera and on the rear camera, there is a 48 megapixel wide-angle, 8-megapixel ultrawide-angle, and 2-megapixel micro camera setup of Moto G 5G include HDR, panorama, dual-LED dual-tone flash, and more. It has support for 20W TurboPower fast charging support and non-removable 5000 mAh battery. </p>
-          <h3 style="font-weight: 400;">Moto G 5G  price in India.</h3>
-          <p>Moto G 5G  price in India start from Rs. 20,999 and Moto G 5G  expected release date is 30 November 2020. This smartphone comes with two variants like 4/64GB RAM and 6/128GB RAM. It is available at two color options like Volcanic Gray, and Frosted Silver. </p>
-          <h3 style="font-weight: 400;">Moto G 5G  Key features:</h3>
+          <h2 style="font-weight: 400;">About Redmi Note 9 Pro 5G </h2>
+          <p>Here a lot of leaks have come out about Redmi Note 9 Pro 5G its specification amazes you. Redmi Note 9 Pro 5G smartphone runs on the latest version of the Android operating system 	Android 10, MIUI 12. The phone is powered by an Octa-core (2x2.2 GHz Kryo 570 & 6x1.8 GHz Kryo 570) and it runs on Qualcomm SM7225 Snapdragon 750G 5G (8 nm). </p>
+          <p>Redmi Note 9 Pro 5G smartphone has an IPS LCD display with 1080 x 2400 pixels screen resolution and 395 PPI pixel density. Talking about its camera, On the front camera, you get a 16-megapixel wide primary camera and on the rear camera, there is a 108 megapixel wide-angle, 8-megapixel ultrawide-angle, 2-megapixel depth, and 2-megapixel micro camera setup of Redmi Note 9 Pro 5G include Dual-LED dual-tone flash, HDR, panorama, and more. It has support for 33W TurboPower fast charging support and non-removable 4820 mAh battery. </p>
+          <h3 style="font-weight: 400;">Redmi Note 9 Pro 5G  price in India.</h3>
+          <p>Redmi Note 9 Pro 5G  price in India start from Rs. 17,960 and Redmi Note 9 Pro 5G  expected release date is 01 December 2020. This smartphone comes with three variants like 128GB 6GB RAM, 128GB 8GB RAM, and 256GB 8GB RAM. It is available at three color options like Gray, Blue, and Red/Mint. </p>
+          <h3 style="font-weight: 400;">Redmi Note 9 Pro 5G  Key features:</h3>
           <ul>
-            <li>Diaplay: 6.7 inches</li>
-            <li>Processor: Qualcomm Snapdragon 765G (7 nm)</li>
-            <li>primary camera: 48MP + 8MP + 2MP</li>
+            <li>Diaplay: 6.67 inches</li>
+            <li>Processor: Qualcomm Snapdragon 750G (7 nm)</li>
+            <li>primary camera: 108MP + 8MP + 2MP + 2MP</li>
             <li>selfie camera: 16MP</li>
-            <li>Battery: Non-removable Li-Ion 5000 mAh battery</li>
-            <li>20W TurboPower fast charging.</li>
+            <li>Battery: Non-removable Li-Ion 4820 mAh battery</li>
+            <li>33W fast charging.</li>
           </ul>
           <p></p>
         </div>
     {% endblock content%}
     {% block specs%}
-    <h3 class="spec_title">Moto G 5G  specification</h3>
+    <h3 class="spec_title">Redmi Note 9 Pro 5G  specification</h3>
     <div class="specs_table">
       <div class="specs">
         <strong>Available at</strong>
@@ -44,7 +44,7 @@
       <div class="specs_type">
         <div class="specs_info">
           <strong>Realsed on</strong>
-          <p>30 November 2020</p>
+          <p>01 December 2020</p>
         </div>
         <div class="specs_info">
           <strong>Amazon</strong>
@@ -64,15 +64,15 @@
       <div class="specs_type">
         <div class="specs_info">
           <strong>Make</strong>
-          <p>Motorola</p>
+          <p>Redmi</p>
         </div>
         <div class="specs_info">
           <strong>Models</strong>
-          <p>G 5G</p>
+          <p>Note 9 Pro 5G</p>
         </div>
         <div class="specs_info1">
           <strong>Color</strong>
-          <p>Volcanic Gray, Frosted Silver</p>
+          <p>Gray, Blue, Red/Mint</p>
         </div>
       </div>
     </div>
@@ -112,11 +112,11 @@
       <div class="specs_type">
         <div class="specs_info">
           <strong>Screen</strong>
-          <p>LTPS display capacitive touchscreen</p>
+          <p>	IPS LCD display capacitive touchscreen</p>
         </div>
         <div class="specs_info">
           <strong>Size(inch)</strong>
-          <p>6.7</p>
+          <p>6.67</p>
         </div>
         <div class="specs_info">
           <strong>Resolution</strong>
@@ -136,11 +136,11 @@
       <div class="specs_type">
         <div class="specs_info">
           <strong>OS</strong>
-          <p>Android 10</p>
+          <p>Android 10, MIUI 12</p>
         </div>
         <div class="specs_info">
           <strong>Chipset</strong>
-          <p>Qualcomm Snapdragon 765G (7 nm)</p>
+          <p>Qualcomm Snapdragon 750G 5G</p>
         </div>
         <div class="specs_info">
           <strong>CPU</strong>
@@ -164,7 +164,7 @@
         </div>
         <div class="specs_info1">
           <strong>Internal</strong>
-          <p>4/64GB RAM, 6/128GB RAM</p>
+          <p>6/128GB RAM, 8/128GB RAM, 8/256GB RAM</p>
         </div>
       </div>
     </div>
@@ -176,11 +176,11 @@
       <div class="specs_type">
         <div class="specs_info">
           <strong>Rear Type </strong>
-          <p>Triple</p>
+          <p>Quad</p>
         </div>
         <div class="specs_info">
           <strong>Resolution</strong>
-          <p>48MP + 8MP + 2MP</p>
+          <p>108MP + 8MP + 2MP + 2MP</p>
         </div>
         <div class="specs_info">
           <strong>Front Type</strong>
@@ -200,11 +200,11 @@
       <div class="specs_type">
         <div class="specs_info">
           <strong></strong>
-          <p>Li-Po 5000 mAh, non-removable</p>
+          <p>Li-Po  4820mAh, non-removable</p>
         </div>
         <div class="specs_info">
           <strong>Charging</strong>
-          <p>Yes, Fast charging 20W</p>
+          <p>Yes, Fast charging 33W</p>
         </div>
       </div>
     </div>
@@ -240,7 +240,7 @@
       <div class="specs_type">
         <div class="specs_info">
           <strong>Sensors</strong>
-            <p>Fingerprint (rear-mounted), accelerometer, gyro, proximity,</p>
+            <p>	Fingerprint (side-mounted), accelerometer, gyro, proximity,</p>
         </div>
         <div class="specs_info1">
           <strong></strong>
@@ -265,7 +265,7 @@
       </div>
     </div>
     <div class="comment">
-      <div class="fb-comments" data-href="https://www.hipein.com/mobile/moto-g-5g" data-order-by="social" data-numposts="100" data-width="100%" style="display:block;"></div>
+      <div class="fb-comments" data-href="https://www.hipein.com/mobile/redmi-note-9-pro-5g" data-order-by="social" data-numposts="100" data-width="100%" style="display:block;"></div>
     </div>
   </div>
 {% endblock specs%}
