--- a/limbo/affiliate/templates/mobile/vivo/vivo_page/vivo.html
+++ b/limbo/affiliate/templates/mobile/vivo/vivo_page/vivo.html
@@ -81,8 +81,8 @@
           </div>
           <div class="short-info">
             <div class="full-specs">
-              <!-- {% url 'iphone12promax' %} -->
-              <h5><a href="#">Full specification</a></h5>
+              <!-- {% url 'vivox60pro' %} -->
+              <h5><a href="{% url 'vivox60pro' %}">Full specification</a></h5>
             </div>
           </div>
         </div>
